fix: dark mode

--- a/styles/components/viewToggle.scss
+++ b/styles/components/viewToggle.scss
@@ -40,6 +40,10 @@ $button-size: 30px;
             justify-content: center;
             background: #fff;
             font-size: 18px;
+
+            .dark & {
+                color: #000;
+            }
         }
 
         input:checked + label {
